<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_us_background"
    android:orientation="vertical"
    tools:context=".ui.act.AboutActivity">

    <FrameLayout
        android:id="@+id/flHeaderToolbar"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:paddingStart="9dp"
            android:paddingTop="9dp"
            android:paddingEnd="9dp"
            android:paddingBottom="9dp"
            android:scaleType="centerCrop"
            android:src="@drawable/common_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_us_title"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/about_us_app">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        android:textColor="@color/FFC5C8E4"
        android:textSize="14sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPrivacy"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/about_us_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/launch_privacy"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/about_us_enter_arrow" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>