<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.act.ResultActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:paddingStart="9dp"
            android:paddingTop="9dp"
            android:paddingEnd="9dp"
            android:paddingBottom="9dp"
            android:scaleType="centerCrop"
            android:src="@drawable/common_back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivResult"
        android:layout_width="115dp"
        android:layout_height="104dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/shape_switch_group_not_expand">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivNetwork"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginStart="14dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleStyle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tvNetworkTag"
            app:layout_constraintStart_toEndOf="@+id/ivNetwork"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNetworkTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/result_vpn_name_tage"
            android:textColor="@color/white_70"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivNetwork"
            app:layout_constraintTop_toBottomOf="@+id/tvNetwork" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="14dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPingTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPingTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="14dp"
            android:text="@string/result_vpn_ping"
            android:textColor="@color/white_70"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPing" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <com.milk.global.ad.ui.AdView
        android:id="@+id/nativeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/shape_result_ad_background"
        android:visibility="gone" />
</androidx.appcompat.widget.LinearLayoutCompat>